--- a/webapps/solely/register.html
+++ b/webapps/solely/register.html
@@ -31,7 +31,7 @@
   
                     <div class="form-outline">
                       <label class="form-label" for="firstName">First Name</label>
-                      <input type="text" id="firstName" class="form-control form-control-lg" placeholder="John"/>
+                      <input type="text" name="firstName" id="firstName" class="form-control form-control-lg" placeholder="John"/>
                     </div>
   
                   </div>
@@ -39,7 +39,7 @@
   
                     <div class="form-outline">
                       <label class="form-label" for="lastName">Last Name</label>
-                      <input type="text" id="lastName" class="form-control form-control-lg" placeholder="Doe"/>
+                      <input type="text" name="lastName" id="lastName" class="form-control form-control-lg" placeholder="Doe"/>
                     </div>
   
                   </div>
@@ -59,7 +59,7 @@
                 <p id="errorMessage" style="color: red;"></p>
 
                 <a href="#!" class="forgot-password-link">Forgot password?</a>
-                <p class="login-card-footer-text">Already have an account? <a href="#!" class="text-reset">Sign in</a></p>
+                <p class="login-card-footer-text">Already have an account? <a href="login" class="text-reset">Sign in</a></p>
             </div>
           </div>
         </div>
